# conduit

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HONEST_FRAMEWORK_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  JSON_STANDARDS_ANALYSIS.md  MCP_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  WEEK_14_IMPLEMENTATION_SUMMARY.md  _config.yml  _dump.ll  api_with_docs  conduit_demo  debug_malformed.codon  debug_parse.codon  debug_parse_detailed.codon  debug_test_failures.codon  debug_validate.codon  echo_server  findings.txt  simple_prod_test.codon  test_c_ffi.codon  test_codon_features.codon  test_exception.codon  test_import.codon  test_minimal.codon  test_plugin_minimal.codon  test_socket_new.codon  test_string_parsing.codon
archive/: _dump.ll
benchmarks/: generate_test_routes.py  run_benchmarks.py  runtime_benchmark.codon  runtime_benchmark.ll
conduit/: __init__.codon  init.codon  version.codon
conduit-web/: COMPILER_README.md
docs/: AUTO_DOCS_INTEGRATION.md  CODON_PLUGIN_RESEARCH.md  LANDING_PAGE.md  LAUNCH_ANNOUNCEMENTS.md  MCP_GO_TO_MARKET_STRATEGY.md  MCP_INTEGRATION_GUIDE.md  MCP_TUTORIAL.md  ML_GUIDE.md  ML_INFERENCE_GUIDE.md  PRIORITY_PLAN_WEEK_13.md  PRODUCTION_GUIDE.md  PROJECT_STATUS_REVIEW.md  QUICKSTART.md  ROADMAP.md  WEEK_15_COMPLETION_SUMMARY.md  WEEK_16_COMPLETION_SUMMARY.md  WEEK_16_STRATEGIC_PLAN.md  WEEK_17_STRATEGIC_PLAN.md  WEEK_1_TECHNICAL_REPORT.md  WEEK_3_IR_FUNCTION_RESEARCH.md  WEEK_4_DAY_4_COMPLETE.md  WEEK_5_DAY_1_RESEARCH.md  WEEK_5_DAY_2_TECHNICAL.md  WEEK_5_DAY_4_PERFORMANCE_ANALYSIS.md  WEEK_6_DAY_3_TECHNICAL.md  api-auto-documentation.md  architecture.md  building-sockets-with-codon-ffi.md  building-url-router-with-codon.md  deployment.md  framework-guide.md  getting-started.md  mcp-protocol.md  middleware-implementation.md  ml-pipeline-guide.md  sse-server-sent-events.md
examples/: api_with_docs.codon  custom_http_server.codon  documented_api_demo.codon  echo_server.codon  ensemble_api.codon  framework_autogen.codon  framework_autogen.dispatch.codon  framework_hello_world.codon  framework_hello_world.dispatch.codon  hello_world.codon  http_server_with_routes.codon  live_docs_server  live_docs_server.codon  mcp_advanced_server.codon  mcp_demo_server.codon  mcp_integrated_demo.codon  mcp_modular_server.codon  mcp_server.codon  mcp_simple_server.codon  mcp_streaming_server.codon  milestone3_dispatch_helper.codon  ml_inference_demo.codon  pipeline_demo.codon  production_complete_server.codon  production_mcp_server.codon  production_server.codon  rag_application.codon  simple_http_server.codon  simple_mcp_server.codon  simple_mcp_test.codon  sse_client.html  sse_simple_server.codon  streaming_ml_demo.codon  (+6 more)
plugins/conduit/: CMakeLists.txt  README.md  conduit.cpp  plugin.toml
(+231 files in other folders)
